<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        android:elevation="3dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/enter_the_address_or_use_current_location"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"/>

            <!-- Location Text -->
            <TextView
                android:id="@+id/currentLocationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_current_location"
                android:textColor="#102183"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/location_icon"
                app:layout_constraintTop_toTopOf="@id/location_icon"
                app:layout_constraintBottom_toBottomOf="@id/location_icon"
                tools:text="Use Current Location" />

            <!-- Location Icon -->
            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_adjust_24"
                android:contentDescription="content_description"
                app:layout_constraintTop_toBottomOf="@id/textLayout"
                app:layout_constraintStart_toStartOf="@id/textLayout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:inputType="text"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/enter_location_name" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Button to confirm adding the location -->
            <Button
                android:id="@+id/button_add_location"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/black"
                android:text="@string/add_location"
                app:cornerRadius="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@id/button_cancel"
                app:layout_constraintTop_toBottomOf="@id/currentLocationTV"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#F44336"
                android:text="@string/cancel"
                app:cornerRadius="8dp"
                android:layout_gravity="end"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/currentLocationTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_add_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>